Ejercicio 12 hecho y corregido los ejercicios de ayer

--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,18 @@
     <groupId>ejercicio2</groupId>
     <artifactId>EjerciciosTema6CristinaJ</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <exec.mainClass>ejercicio2.EjerciciosTema6CristinaJ</exec.mainClass>
     </properties>
 </project>
